--- a/css/style.css
+++ b/css/style.css
@@ -455,7 +455,6 @@ a:hover {
     border: 1px solid;
     cursor: default;
 }
-
 .b-pagination {
     margin-top: 30px;
 }
@@ -676,7 +675,9 @@ a:hover {
         display: none;
     }
 }
-
+.none {
+    display: none;
+}
 /* ---------------------------------------------------------------------------------------------------------------------
             header > probki v2
 --------------------------------------------------------------------------------------------------------------------- */
@@ -866,6 +867,7 @@ a:hover {
 --------------------------------------------------------------------------------------------------------------------- */
 
 .b-navbar-header2 {
+    height: 40px;
     border-top: 1px solid #4986c5;
     border-bottom: 1px solid #4986c5;
 }
@@ -962,6 +964,7 @@ a:hover {
 }
 
 .b-navbar-header2__icons-bg {
+    display: none;
     padding: 4px 15px;
 }
 
