--- a/css/style.css
+++ b/css/style.css
@@ -2155,7 +2155,9 @@ a:hover {
 /* =====================================================================================================================
             PARTNERS
 ===================================================================================================================== */
-
+.b-partners-nws {
+    display: none;
+}
 .b-partners-nws__title {
     display: none;
     font-size: 1.3em;
