--- a/css/style.css
+++ b/css/style.css
@@ -2151,7 +2151,9 @@ a:hover {
 .btn-group {
     left: 65px !important;
 }
-
+.smi24__informer {
+    display: none !important;
+}
 /* =====================================================================================================================
             PARTNERS
 ===================================================================================================================== */
